public/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Roboto", sans-serif;
}

button.primary-btn {
    background-color: #F2BCBC;
    padding: 16px 32px;
    border: none;
    font-size: 16px;
    color: black;
    border-radius: 5px;
    max-width: 100%;
    cursor: pointer;
}

button.secondary-btn {
    background-color: #F2BCBC;
    padding: 6px 16px;
    border: none;
    font-size: 16px;
    color: black;
    border-radius: 5px;
    max-width: 100%;
    cursor: pointer;
}

main {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

main h1 {
    position: fixed;
    top: 31px;
    left: 30px;
    width: 50%;
    font-size: 42px;
    color: #fff2f2;
}

.hangman {
    background-color: #C171B9;
    width: 50%;
    height: 100vh;
    padding-top: 120px;
}

#hangman {
    background: url('images/base.svg') no-repeat center center;
    margin: auto;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;

}

#base {
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative
}

#base img.hangman-0 {
    position: absolute;
    bottom: 28px;
    left: 15px;
}

#base img.hangman-1 {
    position: absolute;
    left: 71px;
    top: -28px;
}

#base img.hangman-2 {
    position: absolute;
    left: 0;
    top: -24px;
}

#base img.hangman-3 {
    position: absolute;
    left: 71px;
    top: -28px;
}

#base img.hangman-4 {
    position: absolute;
    left: 7px;
    top: 69px;
}

#base img.hangman-5 {
    position: absolute;
    left: 71px;
    top: 67px;
}

#start_game {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
}

.game-process {
    background-color: #8D5C88;
    width: 50%;
    height: 100vh;
}

#game {
    display: none;
    padding: 40px 60px;
}

#game h2 {
    color: white;
    font-size: 24px;
    margin-bottom: 20px;
    margin-top: 40px;
}

.game-assets {
    margin-top: 20%;
}

.input-container {
    display: flex;
    padding: 35px 0;
}

.input-container input {
    padding: 8px 16px;
    max-width: 100%;
    border: none;
    border-radius: 5px;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    outline: none;
}

.input-container .secondary-btn {

    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    align-self: flex-start;
}

.error-input {
    display: none;
    color: white;
    margin-top: 8px;
    font-size: 14px;
    font-weight: bold;
}

.letter-bar {
    display: inline-block;
    margin: 0 10px;
    font-size: 24px;
    color: white;
    text-align: center;
}

.letter-bar::after {
    content: "";
    display: block;
    width: 20px;
    height: 3px;
    background-color: white;
}

#wrong_letters h3 {
    color: white;
    font-size: 16px;
    margin-bottom: 8px;
}

#wrong_letters span {
    margin: 0 5px;
    font-size: 20px;
    color: white;
    text-transform: uppercase;
    font-weight: 400;
}

#wrong_letters span:after {
    content: ",";
    color: white;
    display: inline-block;
}

#wrong_letters span:last-child:after {
    content: none;
}

@media screen and (max-width: 768px) {
    button.primary-btn {
        padding: 8px 32px;
    }

    main {
        flex-direction: column-reverse;
        min-height: 100vh;
        height: auto;

    }

    main h1 {
        font-size: 24px;
        top: 24px;
        width: auto;
        left: 0;
        right: 0;
        margin: auto;
        position: absolute;
        text-align: center;
    }

    .hangman {
        width: 100%;
        padding-top: 0;
        height: 85vh;
    }

    .game-process {
        width: 100%;
        height: 60vh;
        text-align: center;
    }

    .game-assets {
        margin-top: 12px;
    }

    #game {
        padding: 25px 30px;
    }

    #game h2 {
        font-size: 18px;
        margin-bottom: 12px;
    }
    .input-container{
        align-items: center;
        justify-content: center;
    }
}

